# cpm

./: .env.example  .gitignore  CMakeLists.txt  README.md  benchmark_analysis.ipynb  ebaja-cpm.xml  new-cpm.xml  package-lock.json  package.json  plan.md  prd_v1.md  render.yaml  requirements.txt  tsconfig.json
.gemini/: settings.json
.github/workflows/: ci.yml  deploy-docs.yml
apps/web/: next.config.ts  package-lock.json  package.json  server.mjs  vercel.json  ws-server.mjs
apps/web/src/: proxy.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
apps/web/src/components/: CreateProjectModal.tsx  ImportProjectModal.tsx  TaskModal.tsx  TaskSidebar.tsx  WebSocketListener.tsx
benchmarks/: .gitignore  CMakeLists.txt  README.md  run_all_benchmarks.ts  visualize_benchmarks.ipynb
benchmarks/api/: README.md  auth_benchmark.ts  benchmark_main.ts  benchmark_utils.ts  cpm_benchmark.ts  dashboard_benchmark.ts  departments_benchmark.ts  dependencies_benchmark.ts  notifications_benchmark.ts  projects_benchmark.ts  system_misc_benchmark.ts  tags_benchmark.ts  tasks_benchmark.ts  users_benchmark.ts
benchmarks/cpm_engine/: CMakeLists.txt  backward_pass_benchmark.cpp  benchmark_main.cpp  benchmark_utils.cpp  benchmark_utils.hpp  critical_path_benchmark.cpp  forward_pass_benchmark.cpp  full_pipeline_benchmark.cpp  graph_generator.cpp  graph_generator.hpp  memory_benchmark.cpp  scalability_benchmark.cpp  slack_benchmark.cpp  topo_sort_benchmark.cpp
benchmarks/db/: CMakeLists.txt  README.md  benchmark_main.cpp  db_utils.cpp  db_utils.hpp  dependency_insertion_benchmark.cpp  index_effectiveness_benchmark.cpp  locustfile.py  project_creation_benchmark.cpp  project_loading_benchmark.cpp  query_performance_benchmark.cpp  task_insertion_benchmark.cpp
database/: DATABASE_SETUP.md  README.md  benchmark-test-matrix.md  benchmark-tests.md  benchmark.ts  implementation-plan.md  schema-design.md  validation-test-matrix.md  validation-tests.md  validation.ts
database/tests/: benchmark.test.ts  constraints.test.ts  crud.integration.test.ts  integration.test.ts  report.ts  schema.test.ts  test-cases.ts  transaction.test.ts  validation.test.ts
docs/: api.mdx  architecture.mdx  authentication.mdx  backend.mdx  cpm_engine.mdx  cpm_engine_guide.md  database.mdx  deployment.mdx  development-guide.mdx  frontend.mdx  glossary.mdx  introduction.mdx  notion-DESIGN.md  notion-design.css  notion-design.json  project-structure.mdx  state-management.mdx  tech-stack.mdx  workflows.mdx
engine/api/: example_input.json  schema.json
engine/bench/: benchmark_harness.cpp  benchmark_main.cpp  benchmark_scenarios.h  graph_generator.cpp  graph_generator.h  metrics.cpp  metrics.h  system_info.cpp  system_info.h
engine/docs/: algorithms.md  api.md  architecture.md  benchmark-report.md  implementation_plan.md  test-report.md
engine/include/: cpm_api.h  cpm_types.h  critical_path_finder.h  float_calculator.h  graph_builder.h  graph_validator.h  schedule_calculator.h  topological_sort.h
engine/src/: cli.cpp  critical_path_finder.cpp  float_calculator.cpp  graph_builder.cpp  graph_validator.cpp  schedule_calculator.cpp  topological_sort.cpp
engine/tests/: test_critical_path_finder.cpp  test_float_calculation.cpp  test_graph_construction.cpp  test_graph_validation.cpp  test_schedule_calculation.cpp  test_topological_sort.cpp  test_validation_H_project_duration.cpp  test_validation_L_date_scheduling.cpp  test_validation_N_randomized.cpp  test_validation_phase.cpp
engine/tools/: validate_schema.py
prisma/: README.md  schema.prisma  seed.ts
prisma/migrations/0001_initial/: migration.sql
prisma/migrations/20260610052335_add_collab_rbac_approvals_notifications/: migration.sql
prisma/migrations/20260610204608_add_project_custom_roles/: migration.sql
projects/cpm-planner.html/docs/: 404.html  index.html  search-index.json  sitemap.xml
reports/: FINAL_BENCHMARK_REPORT.md  requirements.txt  summary.csv  summary.json
reports/benchmark_2026-05-30T19_56_19Z/: REPORT.md  benchmark_all.csv  benchmark_results.json
reports/benchmark_2026-05-30T20:53:56Z/: REPORT.md  benchmark_all.csv  benchmark_results.json
reports/database_benchmark_2026-05-30T21-22-22-132Z/: REPORT.md  report.json
reports/database_benchmark_2026-06-16T17-59-27-411Z/: REPORT.md  report.json
reports/database_matrix_2026-06-02T07-20-24-704Z/: REPORT.md  VISUALIZATION.md  report.json
reports/database_validation_2026-05-30T21-22-30-155Z/: REPORT.md  report.json
reports/database_validation_2026-06-01T18-55-11-044Z/: REPORT.md  report.json
reports/database_validation_2026-06-01T19-05-26-529Z/: REPORT.md  report.json
reports/database_validation_2026-06-01T19-30-38-479Z/: REPORT.md  report.json
reports/db_volume_large_2026-06-01T19-43-34-470Z/: REPORT.md  report.json
reports/db_volume_large_2026-06-01T19-44-06-653Z/: REPORT.md  report.json
reports/db_volume_large_2026-06-02T07-20-19-726Z/: REPORT.md  report.json
reports/db_volume_medium_2026-06-01T19-43-33-051Z/: REPORT.md  report.json
reports/db_volume_medium_2026-06-01T19-44-05-483Z/: REPORT.md  report.json
reports/db_volume_medium_2026-06-02T07-20-19-212Z/: REPORT.md  report.json
reports/db_volume_small_2026-06-01T19-43-31-992Z/: REPORT.md  report.json
reports/db_volume_small_2026-06-01T19-44-04-466Z/: REPORT.md  report.json
reports/db_volume_small_2026-06-01T19-44-27-127Z/: REPORT.md  report.json
reports/db_volume_small_2026-06-02T07-20-18-676Z/: REPORT.md  report.json
scratch/: check-roles.ts
scripts/: aggregate_reports.ts  build_stage1.sh  check-error.ts  cpm_integration_benchmark.ts  db_benchmark_manifest.json  db_benchmark_matrix.ts  db_benchmark_runner.ts  db_benchmark_visualize.ts  db_volume_benchmark.ts  generate_master_benchmark_report.ts  remove-cycles.ts  round-durations.ts  schedule-prj-1.ts  seed-ebaja-project.ts  seed-prj-1.ts
src/database/: index.ts  prismaClient.ts  repositories.ts
src/integration/: cpmService.ts  dto.ts  persistence.ts
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+122 files in other folders)
